--- a/frontend/frontend/public/views/product/create.ejs
+++ b/frontend/frontend/public/views/product/create.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Create product</h1>
-    <form method="post" action="/produc/create">
+    <form method="post" action="/product/create">
         <label for="product_name">product_name:</label>
         <input type="text" id="product_name" name="product_name" required>
         <br>
