--- a/frontend/frontend/public/views/user/create.ejs
+++ b/frontend/frontend/public/views/user/create.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Create User</h1>
-    <form method="post" action="/Use/create">
+    <form method="post" action="/User/create">
         <label for="username">User Name:</label>
         <input type="text" id="username" name="username" required>
         <br>
