--- a/frontend/frontend/public/views/order_detail/bookssss.ejs
+++ b/frontend/frontend/public/views/order_detail/bookssss.ejs
@@ -47,12 +47,12 @@
                
                 <td>
                     <a href="/order_detail/<%= order_detail[i].Order_dID %>">View</a>
-                    <a href="/order_detai/update/<%= order_detail[i].Order_dID %>">Edit</a>
-                    <a href="/order_detai/delete/<%= order_detail[i].Order_dID %>">Delete</a>
+                    <a href="/order_detail/update/<%= order_detail[i].Order_dID %>">Edit</a>
+                    <a href="/order_detail/delete/<%= order_detail[i].Order_dID %>">Delete</a>
                 </td>
             </tr>
         <% } %>
     </table>
-    <a href="order_detai/create">Create New order</a>
+    <a href="order_detail/create">Create New order</a>
 </body>
 </html>
