--- a/frontend/frontend/public/views/order_detail/update.ejs
+++ b/frontend/frontend/public/views/order_detail/update.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>update order_detail</h1>
-    <form method="post" action="/order_detai/update/<%= order_detail.Order_dID %>">
+    <form method="post" action="/order_detail/update/<%= order_detail.Order_dID %>">
         <label for="user_ID" >Order_ID:</label>
         <input type="text" id="Order_ID" name="Order_ID" value="<%= order_detail.Order_ID %>">
         <br>
