--- a/frontend/frontend/public/views/order/bookkk.ejs
+++ b/frontend/frontend/public/views/order/bookkk.ejs
@@ -10,7 +10,7 @@
      <h1><%= order.Order_ID %></h1>/
     <p>Order_dID: <%= order.Order_dID %></p> 
     <a href="/order/update/<%= order.order %>">Edit</a>
-    <a href="/orde/delete/<%= order.order %>">Delete</a>
+    <a href="/order/delete/<%= order.order %>">Delete</a>
     <a href="/order">Back to List</a>
 </body>
 </html>
