--- a/frontend/frontend/public/views/order/booksss.ejs
+++ b/frontend/frontend/public/views/order/booksss.ejs
@@ -43,11 +43,11 @@
                 <td><%= name %></td>
                 <td>
 
-                    <a href="/orde/delete/<%= order[i].Order_ID %>">Delete</a>
+                    <a href="/order/delete/<%= order[i].Order_ID %>">Delete</a>
                 </td>
             </tr>
         <% } %>
     </table>
-    <a href="/orde/create">Create New user</a>
+    <a href="/order/create">Create New user</a>
 </body>
 </html>
