--- a/frontend/frontend/public/views/order/update.ejs
+++ b/frontend/frontend/public/views/order/update.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>update Order</h1>
-    <form method="post" action="/orde/update/<%= orde.orde %>">
+    <form method="post" action="/order/update/<%= orde.orde %>">
         
         <label for="Order_dID">Order_dID:</label>
         <input type="text" id="Order_dID" name="Order_dID" value="<%= order.Order_dID %>">
