--- a/frontend/frontend/public/views/product/books.ejs
+++ b/frontend/frontend/public/views/product/books.ejs
@@ -35,6 +35,6 @@
             </tr>
         <% } %>
     </table>
-    <a href="/produc/create">Create New product</a>
+    <a href="/product/create">Create New product</a>
 </body>
 </html>
